- Added Default Shulkerbox Recipe
- Added Leather Recipe
- Added Music Disc 11 Recipe
- Added various Dye Recipes
- Added Charcoal from Food Recipe
- Added Dirt Path Recipe
- Added Lime Dye Recipe